force-app/main/default/objects/Apttus__IDEJobFieldExtraction__c/Apttus__IDEJobFieldExtraction__c.object-meta.xml
<CustomObject>
    <description>Holds one or more field related information received from the IDE Provider (e.g. KIRA)</description>
    <label>IDE Job Field Extraction</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IDE Job Field Extractions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>