force-app/main/default/objects/Apttus__IDEJobFieldExtraction__c/fields/Apttus__ExactText__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ExactText__c</fullName>
    <description>Text used to normalize extracted data</description>
    <inlineHelpText>Text used to normalize extracted data</inlineHelpText>
    <label>Exact Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>