force-app/main/default/objects/Apttus__IDEJobFieldExtraction__c/fields/Apttus__ExtractedValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ExtractedValue__c</fullName>
    <description>The extracted value for the field</description>
    <inlineHelpText>The extracted value for the field</inlineHelpText>
    <label>Extracted Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>