force-app/main/default/objects/Apttus__IDEJobFieldExtraction__c/fields/Apttus__MetaDataFieldId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__MetaDataFieldId__c</fullName>
    <description>The metadata detail associated with the field (e.g. APTS_Agreement__c.Name)</description>
    <inlineHelpText>The metadata detail associated with the field (e.g. APTS_Agreement__c.Name)</inlineHelpText>
    <label>MetaData Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>