force-app/main/default/objects/Apttus__IDEJobFieldExtraction__c/fields/Apttus__PageNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus__PageNumber__c</fullName>
    <description>The page number of the analyzed document</description>
    <inlineHelpText>The page number of the analyzed document</inlineHelpText>
    <label>Page Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>