force-app/main/default/objects/Apttus__IDEJobFieldExtraction__c/fields/Apttus__WordWildCardValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus__WordWildCardValue__c</fullName>
    <description>The word wild card value of the extracted data</description>
    <inlineHelpText>The word wild card value of the extracted data</inlineHelpText>
    <label>Word Wild Card Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>